fixed arrow down alignment -vertical

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ ul {
 }
 #scroll span {
   position: relative;
+  bottom:-10px;
 }
 
 .arrow-bounce {
